--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,15 @@
 site_name: MSCR docs
 theme:
   name: material
+  features:
+    - navigation.tabs  
+    - navigation.tabs.sticky    
+    - navigation.sections
 nav:
-  - Introduction: index.md
-  - API:
-    - Getting starter: api-getting-started.md
-    - Usage guide: api-usage-guide.md
+  - Metadata schema and crosswalk registry: mscr.md    
+    - Deployment: mscr-deployment.md
+    - API:
+      - Getting started: api-getting-started.md
+      - Usage guide: api-usage-guide.md
+  - Vocabulary service: voc.md
+    - Deployment: voc-deployment.md
