--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,10 @@ markdown_extensions:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format  
+  - attr_list
+  - md_in_html
+plugins:
+  - glightbox
 theme:
   name: material
   features:
