Added mscr copy and add revision ui image

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,3 +37,6 @@ nav:
   - 'Group management':
     - 'Getting started': groups/getting-started.md
     - 'Usage guide': groups/usage-guide.md
+  - 'Developers Guide':
+    - 'Getting started': developer/develop-guide.md
+    
