--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ markdown_extensions:
           format: !!python/name:pymdownx.superfences.fence_code_format  
   - attr_list
   - md_in_html
+  - tables
 plugins:
   - glightbox
 theme:
