--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,14 +27,14 @@ theme:
 nav:
   - 'Metadata schema and crosswalk registry':
     - Introduction: index.md
-    - UI Usage Guide: 'mscr/ui-guide.md'
+    - UI Guide: 'mscr/ui-guide.md'
     - Deployment: 'mscr/mscr-deployment.md'
     - MSCR Concepts: 'mscr/functional-overview.md'
     - Schema view: 'mscr/schema-view.md'
     - Crosswalk editor: 'mscr/crosswalk-editor.md'
     - API:
       - 'Getting started': 'mscr/api-getting-started.md'
-      - Usage guide: 'mscr/api-usage-guide.md'
+      - 'Usage guide': 'mscr/api-usage-guide.md'
       - 'Release notes': 'mscr/release-notes.md'
   - 'Vocabulary service':
     - 'Getting started': voc-service/getting-started.md
