Add interoperability guidelines

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,4 +48,5 @@ nav:
     - 'Terms of Use': terms-of-use.md
     - 'Acceptable Use Policy': acceptable-use-policy.md
     - 'Privacy Policy': privacy-guideline.md
+  - 'Interoperability guidelines': interoperability-guidelines.md
     
